# wenet

./: .clang-format  .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  CONTRIBUTING.md  CPPLINT.cfg  IPU_READMD.md  IPU_README.md  README.md  README_CN.md  ROADMAP.md  UIO.html  context.html  genindex.html  index.html  install.html  installation.html  jit_in_wenet.html  kaldi  lm.html  objects.inv  papers.html  pretrained_models.en.html  pretrained_models.html  production.html  py-modindex.html  python_binding.html  python_package.html  reference.html  requirements.html  requirements.txt  runtime.html  search.html  searchindex.js  setup.cfg  setup.py  train.html  tutorial.html  tutorial_aishell.html  (+1 more)
runtime/binding/: CMakeLists.txt  README.md  runtime_wrapper.cc  runtime_wrapper.h  wenet.cc  wenet.h
runtime/binding/go/: README.md
runtime/binding/go/wenet/: model.go  wenet.h
runtime/binding/python/: CMakeLists.txt  MANIFEST.in  README.md  api  decoder  frontend  kaldi  patch  post_processor  py_asr_wrapper.cc  setup.py  utils
runtime/binding/python/cpp/: binding.cc  fake.cc
runtime/binding/python/py/: __init__.py  batch_decoder.py  decode_main.py  decoder.py  hub.py  main.py
runtime/binding/python/wenet/: __init__.py  assets.py  download.py  label_checker.py  model.py  streamming_decoder.py
runtime/binding/python/wenetruntime/: __main__.py  decoder.py  hub.py  main.py
runtime/core/decoder/: BUILD  CMakeLists.txt  asr_decoder.cc  asr_decoder.h  asr_model.cc  asr_model.h  batch_asr_decoder.cc  batch_asr_decoder.h  batch_asr_model.cc  batch_asr_model.h  batch_onnx_asr_model.cc  batch_onnx_asr_model.h  batch_torch_asr_model.cc  batch_torch_asr_model.h  bpu_asr_model.cc  bpu_asr_model.h  context_graph.cc  context_graph.h  ctc_endpoint.cc  ctc_endpoint.h  ctc_prefix_beam_search.cc  ctc_prefix_beam_search.h  ctc_prefix_beam_search_test.cc  ctc_wfst_beam_search.cc  ctc_wfst_beam_search.h  decoder_interface.h  hw_scorer.cc  hw_scorer.h  ios_asr_model.cc  ios_asr_model.h  online_endpoint.cc  online_endpoint.h  onnx_asr_decoder.cc  onnx_asr_decoder.h  onnx_asr_model.cc  onnx_asr_model.h  ov_asr_model.cc  ov_asr_model.h  params.h  path_trie.cc  (+9 more)
runtime/core/grpc/: CMakeLists.txt  grpc_client.cc  grpc_client.h  grpc_server.cc  grpc_server.h  wenet.proto
runtime/core/kaldi/: CMakeLists.txt  README.md
runtime/core/kaldi/base/: io-funcs-inl.h  io-funcs.cc  io-funcs.h  kaldi-common.h  kaldi-error.cc  kaldi-error.h  kaldi-math.cc  kaldi-math.h  kaldi-types.h  kaldi-utils.h
runtime/core/kaldi/decoder/: lattice-faster-decoder.cc  lattice-faster-decoder.h  lattice-faster-online-decoder.cc  lattice-faster-online-decoder.h
runtime/core/kaldi/fstbin/: fstaddselfloops.cc  fstdeterminizestar.cc  fstisstochastic.cc  fstminimizeencoded.cc  fsttablecompose.cc
runtime/core/kaldi/fstext/: CPPLINT.cfg  determinize-lattice-inl.h  determinize-lattice.h  determinize-star-inl.h  determinize-star.h  fstext-lib.h  fstext-utils-inl.h  fstext-utils.h  kaldi-fst-io-inl.h  kaldi-fst-io.cc  kaldi-fst-io.h  lattice-utils-inl.h  lattice-utils.h  lattice-weight.h  pre-determinize-inl.h  pre-determinize.h  remove-eps-local-inl.h  remove-eps-local.h  table-matcher.h
runtime/core/kaldi/itf/: decodable-itf.h  options-itf.h
runtime/core/kaldi/lat/: determinize-lattice-pruned.cc  determinize-lattice-pruned.h  kaldi-lattice.cc  kaldi-lattice.h  lattice-functions.cc  lattice-functions.h
runtime/core/kaldi/lm/: arpa-file-parser.cc  arpa-file-parser.h  arpa-lm-compiler.cc  arpa-lm-compiler.h
runtime/core/kaldi/lmbin/: arpa2fst.cc
runtime/core/kaldi/util/: basic-filebuf.h  const-integer-set-inl.h  const-integer-set.h  hash-list-inl.h  hash-list.h  kaldi-io-inl.h  kaldi-io.cc  kaldi-io.h  kaldi-pipebuf.h  parse-options.cc  parse-options.h  simple-io-funcs.cc  simple-io-funcs.h  stl-utils.h  text-utils.cc  text-utils.h
runtime/core/test/: CMakeLists.txt  ctc_prefix_beam_search_test.cc  feature_pipeline_test.cc  post_processor_test.cc  utils_test.cc
runtime/horizonbpu/: .gitignore  CMakeLists.txt  README.md  test
runtime/horizonbpu/bpu/: CMakeLists.txt  bpu_asr_model.cc  bpu_asr_model.h
runtime/ios/: CMakeLists.txt  README.md  utils
runtime/ios/WenetDemo/WenetDemo/: AppDelegate.swift  Info.plist  SceneDelegate.swift  ViewController.swift
runtime/ios/WenetDemo/WenetDemo.xcodeproj/: project.pbxproj
runtime/ios/WenetDemo/WenetDemo/Base.lproj/: Main.storyboard
runtime/ios/WenetDemo/WenetDemo/model/: units.txt
runtime/ios/WenetDemo/WenetDemo/wenet/: WenetDemo-Bridging-Header.h  wenet.h  wenet.mm
runtime/ios/torch/include/: pthreadpool.h  xnnpack.h
runtime/ios/torch/include/ATen/: CPUFunctions.h  CompositeExplicitAutogradFunctions.h  (+7 more)
runtime/ipex/: CMakeLists.txt  README.md  env_checking.sh  http  post_processor  web
runtime/ipex/docker/: Dockerfile
runtime/kunlun/xpu/: CMakeLists.txt  conformer_test.cpp  xpu_asr_model.cc  xpu_asr_model.h  xpu_conformer.cpp  xpu_conformer.h  xpu_util.cpp  xpu_util.h
runtime/libtorch/: CMakeLists.txt  README.md  README_CN.md  bin  cmake  frontend  patch
runtime/libtorch/docker/: Dockerfile
runtime/libtorch/web/: app.py
runtime/libtorch/web/templates/: index.html
runtime/openvino/ov/: CMakeLists.txt  ov_asr_model.cc  ov_asr_model.h
runtime/server/x86/: .bazelrc  .gitignore  BUILD  CMakeLists.txt  Dockerfile  README.md  README_CN.md  WORKSPACE  backend  bin  cmake  grpc  libtorch.BUILD  lm  rtf.sh  test  websocket
runtime/server/x86/decoder/: BUILD  ctc_prefix_beam_search.cc  ctc_prefix_beam_search.h  ctc_prefix_beam_search_test.cc  symbol_table.h  torch_asr_decoder.cc  torch_asr_decoder.h  torch_asr_model.cc  torch_asr_model.h
runtime/server/x86/docker/: Dockerfile
runtime/server/x86/frontend/: BUILD  fbank.h  feature_pipeline.cc  feature_pipeline.h  fft.cc  fft.h  wav.h
runtime/server/x86/utils/: BUILD  CPPLINT.cfg  blocking_queue.h  cxxopts.h  utils.cc  utils.h
runtime/server/x86/web/: app.py  index.html
runtime/server/x86/websocket/: BUILD  websocket_client.cc  websocket_client.h  websocket_server.cc  websocket_server.h
(+1768 files in other folders)
